--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 						<div class="banner_content">
 							
 							<h1 class="text-uppercase">I am Apoorva Parashar</h1>
-							<h5 class="text-uppercase">Research Professional</h5>
+							<h5 class="text-uppercase">Research Consultant</h5>
 							<div class="d-flex align-items-center">
 								<a class="primary_btn tr-bg" href="files/CV.pdf" target="_blank"><span>Short CV</span></a>
                                                 <a class="primary_btn" href="#"><span>Detailed CV</span></a>
